src/test/run-pass/issue-2633-2.rs
fn a_val(&&x: ~int, +y: ~int) -> int {
    *x + *y
}

fn main() {
    let z = ~22;
    a_val(copy z, copy z);
}
